--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "node index.js",
+    "start": "node out/index.js",
     "build": "tsc -p tsconfig.json"
   },
   "dependencies": {
@@ -9,7 +9,10 @@
     "dotenv": "^16.4.7",
     "fastify": "^5.2.2",
     "pg": "^8.14.1",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "ts-node": "^10.9.2",
+    "typeorm": "^0.3.22",
+    "typeorm-fastify-plugin": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
