--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_PORT=${DB_PORT}
       - DB_HOST=${DB_HOST}
+      - INSTANCE_ID=backend1
     networks:
       - app-network
 
@@ -32,6 +33,7 @@ services:
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_PORT=${DB_PORT}
       - DB_HOST=${DB_HOST}
+      - INSTANCE_ID=backend2
     networks:
       - app-network
 
@@ -46,6 +48,7 @@ services:
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_PORT=${DB_PORT}
       - DB_HOST=${DB_HOST}
+      - INSTANCE_ID=backend3
     networks:
       - app-network
 
