--- a/model.env
+++ b/model.env
@@ -1,5 +1,5 @@
 # frontend
-VITE_BASE_URL = http://localhost:3000
+VITE_BASE_URL = http://localhost/api
 
 #backend
 DB_NAME = postgres
@@ -7,4 +7,5 @@ DB_USERNAME = postgres
 DB_PASSWORD = postgres
 DB_PORT = 5432
 DB_HOST = amazonaws.com
+PROXY_URL = http://localhost:3000
 INSTANCE_ID = backend-local
