--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_PORT=${DB_PORT}
       - DB_HOST=${DB_HOST}
+      - PROXY_URL=${PROXY_URL}
       - INSTANCE_ID=backend1
     networks:
       - app-network
@@ -33,6 +34,7 @@ services:
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_PORT=${DB_PORT}
       - DB_HOST=${DB_HOST}
+      - PROXY_URL=${PROXY_URL}
       - INSTANCE_ID=backend2
     networks:
       - app-network
@@ -48,6 +50,7 @@ services:
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_PORT=${DB_PORT}
       - DB_HOST=${DB_HOST}
+      - PROXY_URL=${PROXY_URL}
       - INSTANCE_ID=backend3
     networks:
       - app-network
